simple html table view of table Person

--- a/gui/views/bar-chart.handlebars
+++ b/gui/views/bar-chart.handlebars
@@ -3,4 +3,4 @@
     <svg class="bar-chart"></svg>
 </body>
 
-<script type="module" src="./static/js/index.js"></script>
+<script type="module" src="./static/js/bar-chart.js"></script>
