--- a/gui/public/static/css/illuminati.css
+++ b/gui/public/static/css/illuminati.css
@@ -7,11 +7,12 @@ h1 {}
 
 .data-table-container {
     border-left: 4px solid black;
-    padding-left: 8px;
+    /* padding-left: 8px; */
 }
 
 .data-table-title {
-    padding: 8px 0;
+    padding: 0.5rem 0;
+    padding-left: 0.5rem;
     margin: 0;
     outline: none;
     border-radius: 0;
